--- a/index.html
+++ b/index.html
@@ -2,66 +2,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>SagorTopUpBD - Full Version</title>
-  <style>
-    body { font-family: Arial, sans-serif; padding: 20px; background: #f9f9f9; }
-    section { margin-bottom: 30px; padding: 15px; background: #fff; border: 1px solid #ccc; }
-    h2 { color: #333; }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>SagorTopUpBD</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; padding: 20px; }
+        img { max-width: 100%; height: auto; }
+    </style>
 </head>
 <body>
-
-  <h1>Welcome to SagorTopUpBD</h1>
-
-  <section>
-    <h2>1. Free Fire / Membership / Indonesia Server</h2>
+    <h1>Welcome to SagorTopUpBD</h1>
+    <p>Best Top-Up Service for Free Fire, PUBG, and More</p>
+    <img src="images/banner.jpg" alt="TopUp Banner">
+    <h2>Our Services</h2>
     <ul>
-      <li>Free Fire Diamond Pack</li>
-      <li>Membership Monthly</li>
-      <li>Indonesia Server Access</li>
+        <li>Free Fire Membership</li>
+        <li>PUBG UC</li>
+        <li>Facebook Reactions</li>
     </ul>
-  </section>
-
-  <section>
-    <h2>2. bKash / Nagad Payment Instructions</h2>
-    <p>Send payment to: <strong>01904868268</strong></p>
-    <p>Enter your transaction ID below to verify:</p>
-    <input type="text" placeholder="Transaction ID">
-    <button>Verify</button>
-  </section>
-
-  <section>
-    <h2>3. Social Media Services</h2>
-    <ul>
-      <li>Facebook Auto Reactions</li>
-      <li>TikTok Followers</li>
-      <li>YouTube Subscribers</li>
-    </ul>
-  </section>
-
-  <section>
-    <h2>4. Footer</h2>
-    <p>Address: Dhaka, Bangladesh</p>
-    <p>Facebook | YouTube</p>
-  </section>
-
-  <section>
-    <h2>5. Login / Register</h2>
-    <button>Login with Google</button><br><br>
-    <input type="text" placeholder="Email"><br>
-    <input type="password" placeholder="Password"><br>
-    <button>Register</button>
-  </section>
-
-  <section>
-    <h2>6. More Games</h2>
-    <ul>
-      <li>PUBG UC</li>
-      <li>FC Mobile Coin</li>
-    </ul>
-  </section>
-
 </body>
 </html>
