--- a/index.html
+++ b/index.html
@@ -1,40 +1,23 @@
-
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sagortopupbd Login</title>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-app.js"></script>
-  <script src="https://www.gstatic.com/firebasejs/9.6.1/firebase-auth.js"></script>
+    <meta charset="UTF-8">
+    <title>Sagortopupbd Image Gallery</title>
+    <style>
+        body { font-family: Arial, sans-serif; text-align: center; background-color: #f8f9fa; }
+        h1 { margin-top: 20px; }
+        .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
+        .gallery img { width: 300px; height: auto; border: 2px solid #ccc; border-radius: 10px; }
+    </style>
 </head>
 <body>
-  <h2>Login</h2>
-  <button onclick="googleLogin()">Login with Google</button>
-
-  <script>
-    const firebaseConfig = {
-      apiKey: "AIzaSyDTjboLACelP0sZt0rj18SEZuWXsVQ1L5k",
-      authDomain: "sagortopupbd.firebaseapp.com",
-      projectId: "sagortopupbd",
-      appId: "1:458480335127:web:exampleappid123456"
-    };
-
-    // Initialize Firebase
-    const app = firebase.initializeApp(firebaseConfig);
-    const auth = firebase.auth();
-
-    function googleLogin() {
-      const provider = new firebase.auth.GoogleAuthProvider();
-      auth.signInWithPopup(provider)
-        .then((result) => {
-          const user = result.user;
-          alert("Logged in as: " + user.displayName);
-        })
-        .catch((error) => {
-          console.error(error);
-          alert("Login Failed!");
-        });
-    }
-  </script>
+    <h1>Sagortopupbd Gallery</h1>
+    <div class="gallery">
+        <img src="images/image_1.jpg" alt="Image 1">
+        <img src="images/image_2.jpg" alt="Image 2">
+        <img src="images/image_3.jpg" alt="Image 3">
+        <img src="images/image_4.jpg" alt="Image 4">
+        <img src="images/image_5.jpg" alt="Image 5">
+    </div>
 </body>
 </html>
