--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Sagortopupbd Image Gallery</title>
-    <style>
-        body { font-family: Arial, sans-serif; text-align: center; background-color: #f8f9fa; }
-        h1 { margin-top: 20px; }
-        .gallery { display: flex; flex-wrap: wrap; justify-content: center; gap: 20px; margin-top: 30px; }
-        .gallery img { width: 300px; height: auto; border: 2px solid #ccc; border-radius: 10px; }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Sagortopupbd Gallery</title>
 </head>
 <body>
     <h1>Sagortopupbd Gallery</h1>
-    <div class="gallery">
-        <img src="images/image_1.jpg" alt="Image 1">
-        <img src="images/image_2.jpg" alt="Image 2">
-        <img src="images/image_3.jpg" alt="Image 3">
-        <img src="images/image_4.jpg" alt="Image 4">
-        <img src="images/image_5.jpg" alt="Image 5">
+    <div>
+        <img src="images/image_1.jpg" alt="Image 1" style="width:200px;margin:10px;"><br>
+        <img src="images/image_2.jpg" alt="Image 2" style="width:200px;margin:10px;"><br>
+        <img src="images/image_3.jpg" alt="Image 3" style="width:200px;margin:10px;"><br>
+        <img src="images/image_4.jpg" alt="Image 4" style="width:200px;margin:10px;"><br>
+        <img src="images/image_5.jpg" alt="Image 5" style="width:200px;margin:10px;"><br>
+
     </div>
 </body>
 </html>
